--- a/DepartmentManagerFrontend/src/styles.scss
+++ b/DepartmentManagerFrontend/src/styles.scss
@@ -1,3 +1,6 @@
+@import '../src/app/variables.scss';
+
 body{
-    background-color:cadetblue ;
+    background-color:$theme-color-secondary;
+    font-family: $theme-font-base;
 }
