--- a/DepartmentManagerFrontend/src/app/login/login.component.scss
+++ b/DepartmentManagerFrontend/src/app/login/login.component.scss
@@ -5,5 +5,11 @@
 
     position: absolute;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
+    width: 500px;
+}
+
+.input-container{
+    @include input-container;
 }
